<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="24dp">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="174dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="24dp"
            android:src="@drawable/travelbuddy_logo"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Create Account"
            android:textSize="28sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:layout_marginBottom="24dp"/>

        <EditText
            android:id="@+id/etFirstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="First Name"
            android:inputType="textPersonName"
            android:textColor="@color/black"
            android:textColorHint="@color/gray"
            android:background="@drawable/rounded_edittext_white"
            android:layout_marginBottom="8dp"/>

        <EditText
            android:id="@+id/etLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Last Name"
            android:inputType="textPersonName"
            android:textColor="@color/black"
            android:textColorHint="@color/gray"
            android:background="@drawable/rounded_edittext_white"
            android:layout_marginBottom="8dp"/>

        <EditText
            android:id="@+id/etUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Username"
            android:inputType="textPersonName"
            android:textColor="@color/black"
            android:textColorHint="@color/gray"
            android:background="@drawable/rounded_edittext_white"
            android:layout_marginBottom="8dp"/>

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Email"
            android:inputType="textEmailAddress"
            android:textColor="@color/black"
            android:textColorHint="@color/gray"
            android:background="@drawable/rounded_edittext_white"
            android:layout_marginBottom="8dp"/>

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Password"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:textColorHint="@color/gray"
            android:background="@drawable/rounded_edittext_white"
            android:layout_marginBottom="8dp"/>

        <EditText
            android:id="@+id/confirmPasswordEdt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Confirm Password"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:textColorHint="@color/gray"
            android:background="@drawable/rounded_edittext_white"
            android:layout_marginBottom="8dp"/>

        <EditText
            android:id="@+id/etAge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Age"
            android:inputType="number"
            android:textColor="@color/black"
            android:textColorHint="@color/gray"
            android:background="@drawable/rounded_edittext_white"
            android:layout_marginBottom="8dp"/>

        <EditText
            android:id="@+id/etGender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Gender"
            android:inputType="text"
            android:textColor="@color/black"
            android:textColorHint="@color/gray"
            android:background="@drawable/rounded_edittext_white"
            android:layout_marginBottom="8dp"/>

        <Button
            android:id="@+id/btnSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="Sign Up"
            android:textColor="@color/buttonTextColor"
            android:background="@color/buttonBackground"/>

        <TextView
            android:id="@+id/tvLoginLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="Already have an account? Login"
            android:textColor="@color/white"
            android:layout_gravity="center"/>
            


    </LinearLayout>

</ScrollView>
