<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp"
    android:background="@drawable/gradient_background">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="174dp"
        android:layout_gravity="center"
        android:layout_marginTop="48dp"
        android:layout_marginBottom="24dp"
        android:src="@drawable/travelbuddy_logo"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Welcome Back"
        android:textSize="28sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_gravity="center"
        android:layout_marginBottom="32dp"/>

    <EditText
        android:id="@+id/etUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Username"
        android:inputType="textPersonName"
        android:padding="16dp"
        android:textColor="@color/black"
        android:textColorHint="@color/gray"
        android:background="@drawable/rounded_edittext_white"
        android:layout_marginBottom="8dp"/>

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Password"
        android:inputType="textPassword"
        android:padding="16dp"
        android:textColor="@color/black"
        android:textColorHint="@color/gray"
        android:background="@drawable/rounded_edittext_white"
        android:layout_marginBottom="16dp"/>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Login"
        android:textSize="16sp"
        android:padding="14dp"
        android:background="@drawable/rounded_button_white"
        android:textColor="@color/white"
        android:layout_gravity="center"/>

    <Button
        android:id="@+id/btnForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_gravity="center"
        android:textSize="14sp"
        android:background="?android:attr/selectableItemBackground"
        android:text="Forgot Password?"
        android:textColor="@color/white"
        style="@style/Widget.MaterialComponents.Button.TextButton"/>


    <TextView
        android:id="@+id/tvSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:text="Don't have an account? Sign Up"
        android:textColor="@color/white"
        android:layout_gravity="center"
        android:padding="16dp"/>
</LinearLayout>
